Ahora se pueden poner imágenes a los vehículos
